--- a/paper/supplement/dge/makefile
+++ b/paper/supplement/dge/makefile
@@ -1,15 +1,15 @@
 NOW=`date --utc +%y%m%d.%H%M%SZ`
 
-LOG=/ComparisonOfMetabolicLabeling/paper/supplement/dge/logs
+LOG=logs
 
 # read counting - "un-split" files for DGE
 # module load subread, featureCounts v1.5.1
-slam=/ComparisonOfMetabolicLabeling/paper/supplement/dge/mapping/slam/*.bam
-tuc=/ComparisonOfMetabolicLabeling/paper/supplement/dge/mapping/tuc/*.bam
-tls=/ComparisonOfMetabolicLabeling/paper/supplement/dge/mapping/tls/*.bam
-res=/ComparisonOfMetabolicLabeling/paper/supplement/dge/tables/$*-0h-1h-2h-4h-8h.counts.tsv
+slam=mapping/slam/*.bam
+tuc=mapping/tuc/*.bam
+tls=mapping/tls/*.bam
+res=tables/$*-0h-1h-2h-4h-8h.counts.tsv
 count-%:
-	srun --mem=50G -c 16 featureCounts -t exon -s 2 -p -B -C -M --fraction --ignoreDup -T 16 --tmpDir /scratch/global_tmp -a /ComparisonOfMetabolicLabeling/index/GRCh38_85_plus_Spikes_Isabel.gtf -o $(res) $($*) > $(LOG)/$@.$(NOW).log 2>&1 &
+	srun --mem=50G -c 16 featureCounts -t exon -s 2 -p -B -C -M --fraction --ignoreDup -T 16 --tmpDir /scratch/global_tmp -a ../../../index/GRCh38_85_plus_Spikes_Isabel.gtf -o $(res) $($*) > $(LOG)/$@.$(NOW).log 2>&1 &
 
 SRC=scripts
 OBJS=slam tuc tls
