--- a/pulseRTc/makefile
+++ b/pulseRTc/makefile
@@ -6,6 +6,8 @@ SLURM40=srun -c 40 --mem=50GB
 
 OBJS=slam tuc tls
 
+# Adjust paths as required
+
 # pre-processing ---
 # sort/index bams, rename 
 SRC=run
@@ -17,9 +19,9 @@ get-dedups:
 	srun --mem=40GB $(SRC)/markdups $(SRC)/SAMPLELIST.TXT > ../logs/$@.$(NOW).log 2>&1 &
 	
 # workflow ---
-# source ~/.virtualenvs/pulsertc/bin/activate
-CFG=/ComparisonOfMetabolicLabeling/pulseRTc/run
-LOG=/ComparisonOfMetabolicLabeling/pulseRTc/run/logs
+# source /path/to/virtual/environment/bin/activate
+CFG=run
+LOG=run/logs
 run-workflow:
 	for obj in $(OBJS); do \
 		$(SLURM) run $(CFG)/$$obj.yaml --trim5p 5 --trim3p 5 --use-slurm --num-cpus 40 --mem 100G --logging-level DEBUG --log-file $(LOG)/$@.$(NOW).$$obj.out --mail-user boileau@uni-heidelberg.de & \
@@ -27,17 +29,17 @@ run-workflow:
 	
 # read counting
 # module load subread, featureCounts v1.5.1
-std=/ComparisonOfMetabolicLabeling/pulseRTc/workflow/mapping/std/*.bam
-slam=/ComparisonOfMetabolicLabeling/pulseRTc/workflow/mapping/slam/*.bam
-tuc=/ComparisonOfMetabolicLabeling/pulseRTc/workflow/mapping/tuc/*.bam
-tls=/ComparisonOfMetabolicLabeling/pulseRTc/workflow/mapping/tls/*.bam
-res=/ComparisonOfMetabolicLabeling/pulseRTc/workflow/tables/$*-0h-1h-2h-4h-8h.counts.tsv
+std=workflow/mapping/std/*.bam
+slam=workflow/mapping/slam/*.bam
+tuc=workflow/mapping/tuc/*.bam
+tls=workflow/mapping/tls/*.bam
+res=workflow/tables/$*-0h-1h-2h-4h-8h.counts.tsv
 count-%:
-	srun --mem=50G -c 16 featureCounts -t exon -s 2 -p -B -C -M --fraction --ignoreDup -T 16 --tmpDir /scratch/global_tmp -a /ComparisonOfMetabolicLabeling/index/GRCh38_85_plus_Spikes_Isabel.gtf -o $(res) $($*) > $(LOG)/$@.$(NOW).log 2>&1 &
+	srun --mem=50G -c 16 featureCounts -t exon -s 2 -p -B -C -M --fraction --ignoreDup -T 16 --tmpDir /scratch/global_tmp -a ../index/GRCh38_85_plus_Spikes_Isabel.gtf -o $(res) $($*) > $(LOG)/$@.$(NOW).log 2>&1 &
 
 # pulseR ---
 PSRC=pulser
-PLOG=/ComparisonOfMetabolicLabeling/pulseRTc/pulser/logs
+PLOG=pulser/logs
 # prepare count tables and metadata for processing with pulseR
 # *** for ERCC, user must symlink std files  
 prep:
